Monday, August 8th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Forgot to change to 0.3 in wfmath/Makefile.am, fixed that.
	* Got rid of support for old 'list of lists' encoding
	  for AxisBox in atlasconv.h. Also got rid of a bunch
	  of push_back() calls by predeclaring the size of
	  Atlas::Message::Foo::ListType instances.

Monday, August 8th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Updated version number to 0.3 in preparation for doing
	  a release next week.
	* Got rid of wfmath-config, we won't support it in 0.3.
	* Added instring_test, which tests both IntToString() and IRand().
	* Got rid of operator<() in all classes except for those
	  in timestamp.*. It was only there 'so we could use wfmath
	  classes as keys in std::map'. However, since equality
	  isn't transitive (a == b && b == c does not imply a == c),
	  this has some problems. If you really want a map of spatial
	  objects, you probably want something like stage's OctTree
	  instead.
	* Fixed IRand() to deal with the fact that UINT_MAX is often
	  larger than RAND_MAX.
	* Added a few inline IntToString() cases to make sure short
	  and int get cast to the appropriate (signed or unsigned)
	  version of long.
	* Added int_to_string.h to wfmath.h.

Monday, August 4th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Added IntToString() utility function, because I'm tired of
	  writing the same code in a dozen different applications.

Tuesday, July 22nd, 2003   Ron Steinke <rsteinke@w-link.net>

	* More poly-atlas tweaks. Forgot to inline some wrapper
	  functions, had to add a template AtlasInType constructor
	  to take advantange of the fact that the Atlas::Message::Foo
	  constructor is overloaded (needed that to build Eris).

Tuesday, July 22nd, 2003   Ron Steinke <rsteinke@w-link.net>

	* Changes to support both Atlas-C++ 0.4 and 0.6 with atlasconv.h
	* Changed needless 'const CoordType' for pass-by-value
	  in some Quaternion function calls to 'CoordType'
